--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 
-
+server.servlet.context-path=/employee-app
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
