--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,2 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/set7_db
-spring.datasource.username=root
-spring.datasource.password=root
 
-
-server.servlet.context-path=/employee-app
-#spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-
+spring.profiles.active=dev
